// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nodes GET_CHILDREN_FAILURE 1`] = `
Object {
  "1": Object {
    "children": Object {
      "count": 0,
      "items": Array [],
    },
    "id": 0,
    "isError": true,
    "isFetchingChildren": false,
    "isFetchingTranslations": true,
    "meta": Object {
      "children": Object {},
      "parent": null,
      "status": Object {
        "has_unpublished_changes": true,
        "live": false,
        "status": "",
      },
    },
  },
}
`;

exports[`nodes GET_CHILDREN_START 1`] = `
Object {
  "1": Object {
    "children": Object {
      "count": 0,
      "items": Array [],
    },
    "id": 0,
    "isError": false,
    "isFetchingChildren": true,
    "isFetchingTranslations": false,
    "meta": Object {
      "children": Object {},
      "parent": null,
      "status": Object {
        "has_unpublished_changes": true,
        "live": false,
        "status": "",
      },
    },
  },
}
`;

exports[`nodes GET_CHILDREN_SUCCESS 1`] = `
Object {
  "1": Object {
    "children": Object {
      "count": 3,
      "items": Array [
        3,
        4,
        5,
      ],
    },
    "id": 0,
    "isError": false,
    "isFetchingChildren": false,
    "isFetchingTranslations": false,
    "meta": Object {
      "children": Object {},
      "parent": null,
      "status": Object {
        "has_unpublished_changes": true,
        "live": false,
        "status": "",
      },
    },
  },
  "3": Object {
    "children": Object {
      "count": 0,
      "items": Array [],
    },
    "id": 3,
    "isError": false,
    "isFetchingChildren": false,
    "isFetchingTranslations": false,
    "meta": Object {
      "children": Object {},
      "parent": null,
      "status": Object {
        "has_unpublished_changes": true,
        "live": false,
        "status": "",
      },
    },
  },
  "4": Object {
    "children": Object {
      "count": 0,
      "items": Array [],
    },
    "id": 4,
    "isError": false,
    "isFetchingChildren": false,
    "isFetchingTranslations": false,
    "meta": Object {
      "children": Object {},
      "parent": null,
      "status": Object {
        "has_unpublished_changes": true,
        "live": false,
        "status": "",
      },
    },
  },
  "5": Object {
    "children": Object {
      "count": 0,
      "items": Array [],
    },
    "id": 5,
    "isError": false,
    "isFetchingChildren": false,
    "isFetchingTranslations": false,
    "meta": Object {
      "children": Object {},
      "parent": null,
      "status": Object {
        "has_unpublished_changes": true,
        "live": false,
        "status": "",
      },
    },
  },
}
`;

exports[`nodes GET_PAGE_FAILURE 1`] = `
Object {
  "1": Object {
    "children": Object {
      "count": 0,
      "items": Array [],
    },
    "id": 0,
    "isError": true,
    "isFetchingChildren": false,
    "isFetchingTranslations": true,
    "meta": Object {
      "children": Object {},
      "parent": null,
      "status": Object {
        "has_unpublished_changes": true,
        "live": false,
        "status": "",
      },
    },
  },
}
`;

exports[`nodes GET_PAGE_SUCCESS 1`] = `
Object {
  "1": Object {
    "children": Object {
      "count": 0,
      "items": Array [],
    },
    "id": 0,
    "isError": false,
    "isFetchingChildren": false,
    "isFetchingTranslations": false,
    "meta": Object {
      "children": Object {},
      "parent": null,
      "status": Object {
        "has_unpublished_changes": true,
        "live": false,
        "status": "",
      },
    },
  },
}
`;

exports[`nodes OPEN_EXPLORER 1`] = `
Object {
  "1": Object {
    "children": Object {
      "count": 0,
      "items": Array [],
    },
    "id": 0,
    "isError": false,
    "isFetchingChildren": false,
    "isFetchingTranslations": false,
    "meta": Object {
      "children": Object {},
      "parent": null,
      "status": Object {
        "has_unpublished_changes": true,
        "live": false,
        "status": "",
      },
    },
  },
}
`;

exports[`nodes empty state 1`] = `Object {}`;
